updated html css icon

--- a/style.css
+++ b/style.css
@@ -1,1 +1,30 @@
+/* ************************************General selector******************************* */
+body{
+    margin: 0;
+}
+h1{
+    margin-top: 0px;
+}
+
+
+
+
+/* ***********************************Class selector************************************** */
+.head{
+    background-color: #F3F4F9;
+}
+
+
+
+
+
+/* ***********************************ID selector************************************** */
+
+
+
+
+
+/* ***********************************Pseudo selector************************************** */
+
+
 
