--- a/style.css
+++ b/style.css
@@ -3,20 +3,29 @@ body{
     margin: 0;
 }
 h1{
-    margin-top: 0px;
+    margin: 0px;
 }
-
-
-
-
+p{
+    margin: 0;
+}
 /* ***********************************Class selector************************************** */
-.head{
-    background-color: #F3F4F9;
+.top-container{
+    background-color: #413f3f;
+    height: 100px;
 }
-
-
-
-
+.middle-container{
+    width: 100%;
+    height: 600px;
+    background-color: rgb(101, 179, 23);
+    margin: 0;
+}
+.bottem-container{
+    width: 100%;
+    margin: 0;
+    background-color: rgb(44, 78, 78);
+    height: 600px;
+}
+ 
 
 /* ***********************************ID selector************************************** */
 
